Prevent weird zooming issues on iPhone

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ code {
   display: flex;
   justify-content: center;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+}
